--- a/CLIENT/public/index.html
+++ b/CLIENT/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="theme-color" content="#000000" />
-    <link href="https://fonts.googleapis.com/css2?family=Goldman&family=Inter:wght@300&family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Goldman&family=Poppins:wght@200&display=swap" rel="stylesheet">
     <meta
       name="description"
       content="Web site created using create-react-app"
